k8s/auth-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth-service
  template:
    metadata:
      labels:
        component: auth-service
    spec:
      containers:
        - name: auth-service
          image: bbolv/minikube-auth_service
          ports:
            - containerPort: 4001
