k8s/chat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      component: chat
  template:
    metadata:
      labels:
        component: chat
    spec:
      containers:
        - name: chat
          image: bbolv/minikube-chat_service
          ports:
            - containerPort: 4003
