k8s/users-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      component: users
  template:
    metadata:
      labels:
        component: users
    spec:
      containers:
        - name: users
          image: bbolv/minikube-users_service
          ports:
            - containerPort: 4002
