k8s/auth-service-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth-service
  ports:
    - port: 4001
      targetPort: 4001
