k8s/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    component: auth
  ports:
  - port: 4001
    targetPort: 4001
