k8s/auth_service-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth_service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth_service
  ports:
    - port: 4001
      targetPort: 4001
