k8s/chat-service-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: chat-service
  ports:
    - port: 4003
      targetPort: 4003
