k8s/chat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    component: chat
  ports:
  - port: 4003
    targetPort: 4003
