k8s/middleware-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: middleware-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: middleware
  ports:
    - port: 4001
      targetPort: 4001
