k8s/middleware-service.yml
apiVersion: v1
kind: Service
metadata:
  name: middleware-service
spec:
  type: NodePort  
  selector:
    component: middleware
  ports:
    - port: 80
      targetPort: 4000
