k8s/users-service.yml
apiVersion: v1
kind: Service
metadata:
  name: users
spec:
  selector:
    component: users
  ports:
  - port: 4002
    targetPort: 4002
