k8s/users_service-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: users-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: users-service
  ports:
    - port: 4002
      targetPort: 4002
